# modeling

./: A_Arte_dos_Derivativos_Lab1.ipynb  MPE21DERIV_20251_Lab_1.ipynb  MPE21DERIV_20251_Lab_2.ipynb  MPE21DERIV_20251_Lab_3.ipynb  MPE21DERIV_20251_Lab_4.ipynb  MPE21DERIV_20251_Lab_5.ipynb  Reiner & Rubinstein.pptx  Smile for dummies 2.xlsx  [DO_NOT_USE]_dk_binomial_tree.ipynb  auto_call.ipynb  barrier_options.ipynb  bs_implied_distributions_corrected.ipynb  bs_implied_distributions_deltas.ipynb  bs_mc__no_dy.ipynb  bs_mc_no_dy.ipynb  bs_theta_gamma.ipynb  cds.html  cds.ipynb  crr_binomial_tree.ipynb  delta.xlsx  dk_binomial_tree_xl.ipynb  dk_binomial_tree_xl.xlsx  implied_distributions.ipynb  initials.xlsx  options.xlsx  output.xlsx  polars.ipynb  pyproject.toml  requirements.txt  results.xlsx  smile-for-dummies-pv.ipynb  the_art_of_derivatives.ipynb  xlwings.ipynb  xlwings_udf.ipynb  xwings_udf.xlsm  yf_option_data.py
lib/: deman_kani.py  derivatives.py  derivatives_binomial.py  xlwings_udf_lib.py
