[project]
name = "modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.6",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "polars>=1.26.0",
    "scipy>=1.15.1",
    "xlwings>=0.33.11",
    "yfinance>=0.2.54",
]
